working on login

--- a/nodejs/views/application.ejs
+++ b/nodejs/views/application.ejs
@@ -23,6 +23,7 @@ $(document).ready(function(){
 
 <body>
 <h1>Application page  Test, Deletion needed</h1>
+<p>{{user}}</p>
 </body>
 </html>
 <!-- Steeng create at: Fri Aug 19 18:33:33 EDT 2016 -->
