--- a/nodejs/views/index.ejs
+++ b/nodejs/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Confreak</title>
-<meta name="viewport" content="width = device-width, initial-scale = 1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -38,18 +38,19 @@ $(document).ready(function(){
 </head>
 
 <body>
+	
+	<div class="container">
 	<h1>&nbsp;</h1>
 	<h1>Confreak</h1>
-	<div class="container">
 	<table>
 		<tr><td>
 			<div id="formid">
 				<form method="post" action="\login">
-				<input type="text" name="email" value=""  class="form-control"  placeholder="Email"></p>
-				<input type="password" name="password" value="" class="form-control" placeholder="Password"></p>
+				<input type="email" name="email" value=""  class="form-control"  placeholder="Email" required></p>
+				<input type="password" name="password" value="" class="form-control" placeholder="Password" required pattern=".{6,}"></p>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<div class="col-md-4 text-center"> 
-				<input id="login" type="submit" name="commit" class="btn btn-success" value="login">
+				<div class="text-center"> 
+				<input id="login" type="submit" name="commit" class="btn btn-success" value="Login">
 				</div>
 				</form>
 			</div>
