massive code refactor

--- a/nodejs/views/application.ejs
+++ b/nodejs/views/application.ejs
@@ -219,7 +219,7 @@ function setupWebsocket(email) {
             	if ( app.AppType === APP_TYPE_MAP["Monitor Application"] )
             	{
             		let htmlTagID = "id_" + app.AppName + "_" + app.AppType;
-            		$("#"+htmlTagID).text("App Data: " + app.NumericData);
+            		$("#"+htmlTagID).text("App Data: " + app.Data);
             	}
             }
 
